[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.2"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.4.7", features = ["derive"] }
crypto-bigint = { version = "0.5.3", features = ["alloc", "serde"] }
crypto-primes = "0.5.0"
hex = "0.4.3"
sha3 = "0.10.8"
